# aiohttp-asgi-connector

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yaml
aiohttp_asgi_connector/: __init__.py  connector.py  transport.py
tests/: conftest.py  test_connector.py
