[project]
name = "aiohttp-asgi-connector"
version = "1.0.4"
description = "AIOHTTP Connector for running ASGI applications"
authors = [
    {name = "thearchitector", email = "me@eliasfgabriel.com"},
]
dependencies = [
    "aiohttp>=3",
]
requires-python = ">=3.8"
keywords = ["fastapi", "aiohttp", "asgi", "testing", "starlette", "httpx", "asyncio"]
readme = "README.md"
license = {text = "BSD-3-Clause"}

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "fastapi-slim>=0.111.0",
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "mypy>=1.10.1",
    "typing-extensions>=4.12.2",
    "python-multipart>=0.0.9",
]

[tool.pytest.ini_options]
addopts = "-ra -vv"
testpaths = [ "tests" ]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.mypy]
strict = true

[tool.pyright]
ignore = [ "tests" ]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
extend-select = ["B", "I", "ASYNC"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
